--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -288,9 +288,13 @@ jobs:
         shell: bash
         run: |
           cargo make dist-to-installer
-          INSTALLER_ARCHIVE=$(find installers/Windows -maxdepth 1 -iname "*.exe")
+          if [ "$RUNNER_OS" == "Linux" ]; then
+              INSTALLER_ARCHIVE=$(find installers/Linux -maxdepth 1 -iname "*.deb")
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+              INSTALLER_ARCHIVE=$(find installers/Windows -maxdepth 1 -iname "*.exe")
+          fi
           echo "INSTALLER_ARCHIVE=$INSTALLER_ARCHIVE" >>$GITHUB_ENV
-        if: matrix.os == 'windows-2019' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        if: matrix.os != 'macos-10.15' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
 
       - name: Pull Git LFS objects
         run: git lfs pull
@@ -326,7 +330,7 @@ jobs:
           name: ${{ runner.os }}-installer
           path: |
             ${{ env.INSTALLER_ARCHIVE }}
-        if: matrix.os == 'windows-2019' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
+        if: matrix.os != 'macos-10.15' && github.event_name == 'push' && contains(github.ref, 'refs/tags')
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ runner.os }}-artifacts-debug
