workaround for linking bug in pyo3
The pyo3 build script removes python library link directives if you're
building an extension module.

This is problem if you want to build a binary that links against Python
and an extension module in the same project (like we are).

Rust features are additive, so it leaves the "extension-module" feature
enabled in the "shared" build of pyo3, this causes pyo3 to fail to emit
linking directives when building the console binary.

This only worked before because we were using two different versions of
pyo3.

--- a/entrypoint/Cargo.toml
+++ b/entrypoint/Cargo.toml
@@ -4,10 +4,11 @@ name = "console"
 version = "0.1.0"
 description = "Starts the console with the correct python installation"
 edition = "2018"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pyo3 = { version = "0.15", features = ["auto-initialize"] }
+pyo3 = { version = "0.15", features = [
+  "auto-initialize",
+], default-features = false }
 
 [[bin]]
 name = "console"
