Windows installer redist support.[CPP-324] (#237)
First checks the registry to see if VS C++ 14 x64 is present. If not it will attempt to download and install. Then does another check to see if the registry is now valid. If not it will create a popup:
Seems UAC is needed to install this redistributable installer but in theory should only be needed once as future updates will have it already installed. So the auto updater idea is still viable.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -550,7 +550,19 @@ run_task = [{ name = ["build-dist", "purge-dist", "compress-dist"] }]
 
 [tasks.dist-to-installer]
 
+[tasks.install-nsis-plugin]
+script_runner = "@duckscript"
+script = '''
+filepath = set installers/Windows/NSIS/Inetc.zip
+if not is_path_exists ${filepath}
+  mkdir installers/Windows/NSIS
+  wget -O ${filepath} https://nsis.sourceforge.io/mediawiki/images/c/c9/Inetc.zip
+  exec --fail-on-error unzip -d installers/Windows/NSIS installers/Windows/NSIS/Inetc.zip
+end
+'''
+
 [tasks.dist-to-installer.windows]
+dependencies = ["install-nsis-plugin"]
 script_runner = "@shell"
 script = '''
 makensis /V4  .\installers\Windows\Installer.nsi
