--- a/resources/qtquickcontrols2.conf
+++ b/resources/qtquickcontrols2.conf
@@ -1,8 +1,12 @@
 [Controls]
-Style=Material
+Style=SwiftNav
+FallbackStyle=Material
 
 [Material]
 Variant=Dense
+Accent="#FF8300"
+# Theme=Light
+# Primary=<Color like BlueGrey>
 
 [Default]
 Font\Family=Roboto
