--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["Swift Navigation <dev@swift-nav.com>"]
 name = "console-backend"
 version = "0.1.0"
 description = "A Python wrapper for the Rust console backend"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 log = "0.4.14"
@@ -48,10 +48,11 @@ mimalloc = { version = "0.1", default-features = false }
 
 # Optional deps
 tui = { version = "0.16.0", default-features = false, features = [
-    "crossterm",
+  "crossterm",
 ], optional = true }
 crossterm = { version = "0.22.1", optional = true }
 tabwriter = { version = "1.2.1", optional = true }
+rustyline = { version = "9.0.0", optional = true }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
@@ -105,4 +106,4 @@ default = ["pyo3"]
 benches = []
 tests = []
 fft = ["serde-pickle"]
-tui2 = ["tui", "crossterm", "tabwriter", "env_logger"]
+tui2 = ["tui", "crossterm", "tabwriter", "env_logger", "rustyline"]
