--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -42,7 +42,8 @@ minreq = { version = "2.4.2", features = ["https"] }
 regex = { version = "1.5.4" }
 rust-ini = "0.17.0"
 sbp = { version = "4.0.3", features = ["json", "link", "swiftnav"] }
-sbp-settings = { git = "https://github.com/swift-nav/libsettings-rs", branch = "steve/riir" }
+sbp-settings = "0.5.0"
+env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
