--- a/Makefile.toml
+++ b/Makefile.toml
@@ -550,6 +550,53 @@ run_task = [{ name = ["build-dist", "purge-dist", "compress-dist"] }]
 
 [tasks.dist-to-installer]
 
+[tasks.create-mac-icns-file]
+script_runner = "@duckscript"
+script = '''
+exec --fail-on-error iconutil --convert icns ./installers/macOS/desktop-icon.iconset --output ./installers/macOS/icon.icns
+'''
+
+[tasks.dist-to-installer.mac]
+env = { TMP_DIR = "target/installer", CONTENTS_MACOS_DIR = "MacOS", CONTENTS_RESOURCES_DIR = "Resources", APP_FILE_PREFIX = "Swift-Navigation-Console", APP_ORIGINAL_NAME = "console", VERSION_PATH = "console_backend/src/version.txt", INFO_PLIST_PATH = "installers/macOS/Info.plist", ICNS_PATH = "installers/macOS/icon.icns", BACKGROUND_PATH = "resources/images/LogoBackground.jpg", FINAL_DIR = "installers/macOS" }
+script_runner = "@duckscript"
+script = '''
+final_dir = get_env FINAL_DIR
+tmp_dir = get_env TMP_DIR
+app_original_name = get_env APP_ORIGINAL_NAME
+app_file_prefix = get_env APP_FILE_PREFIX
+app_dir_name = set "${app_file_prefix}.app"
+contents_dir = set ${tmp_dir}/${app_dir_name}/Contents
+contents_mac_os = get_env CONTENTS_MACOS_DIR
+contents_mac_os = set ${contents_dir}/${contents_mac_os}
+contents_resources_dir = get_env CONTENTS_RESOURCES_DIR
+contents_resources_dir = set ${contents_dir}/${contents_resources_dir}
+info_plist_path = get_env INFO_PLIST_PATH
+icns_path = get_env ICNS_PATH
+background_path = get_env BACKGROUND_PATH
+
+if is_path_exists ${tmp_dir}
+  rm -r ${tmp_dir}
+end
+
+version_path = get_env VERSION_PATH
+version = readfile ${version_path}
+version = trim_end ${version}
+dmg_path = set ./${final_dir}/${app_file_prefix}-Installer-${version}.dmg
+
+old_dmgs = glob_array "./${final_dir}/*.dmg"
+for dmg_path in ${old_dmgs}
+    rm ${dmg_path}
+end
+
+mkdir ${contents_dir}
+exec --fail-on-error cp -r py39-dist "${contents_mac_os}"
+exec --fail-on-error mv ./${contents_mac_os}/${app_original_name} "./${contents_mac_os}/${app_file_prefix}"
+cp ./${info_plist_path} ./${contents_dir}/Info.plist
+mkdir ${contents_resources_dir}
+cp ${icns_path} ./${contents_resources_dir}/${app_file_prefix}.icns
+exec --fail-on-error create-dmg --volname "${app_file_prefix}-Installer" --volicon "${icns_path}" --background "${background_path}" --hdiutil-verbose --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "${app_dir_name}" 200 190 --hide-extension "${app_dir_name}" --app-drop-link 600 185 "${dmg_path}" "${tmp_dir}"
+'''
+
 [tasks.dist-to-installer.linux]
 env = { TMP_DIR = "target/installer", OPT_DIR = "opt", USR_DIR = "usr", APP_DIR_NAME = "swift-navigation-console", APPS_DIR = "share/applications", ICONS_DIR = "share/icons/hicolor" }
 script_runner = "@shell"
