--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -20,7 +20,7 @@ pyo3 = { version = "0.15", features = [
   "extension-module",
   "macros",
 ], default-features = false, optional = true }
-serde = { version = "1.0.132", features = ["derive"] }
+serde = { version = "1.0.131", features = ["derive"] }
 tempfile = "3.2.0"
 ordered-float = "2.0"
 ndarray = "0.15.4"
@@ -31,20 +31,20 @@ serialport = { version = "4.0.1", default-features = false }
 directories = "4"
 anyhow = { version = "1", features = ["backtrace"] }
 serde_yaml = "0.8.23"
-clap = { version = "3.0.0-rc.7", features = ["derive"] }
+clap = { version = "3.0.0-rc.5", features = ["derive"] }
 indexmap = { version = "1.6.2", features = ["serde"] }
 serde_json = { version = "1" }
 crossbeam = "0.8"
 rand = "0.8.3"
 serde-pickle = { version = "1.1.0", optional = true }
 parking_lot = "0.11.1"
-minreq = { version = "2.4.2", features = ["https"] }
 regex = { version = "1.5.4" }
 rust-ini = "0.17.0"
 sbp = { version = "4.1.1", features = ["json", "link", "swiftnav"] }
 sbp-settings = "0.6.0"
 env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
+reqwest = { version = "0.11", features = ["blocking"] }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
