--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -38,13 +38,13 @@ crossbeam = "0.8"
 rand = "0.8.3"
 serde-pickle = { version = "1.1.0", optional = true }
 parking_lot = "0.11.1"
-minreq = { version = "2.4.2", features = ["https"] }
 regex = { version = "1.5.4" }
 rust-ini = "0.17.0"
 sbp = { version = "4.1.1", features = ["json", "link", "swiftnav"] }
 sbp-settings = "0.6.0"
 env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
+curl = { version = "0.4", features = ["ssl", "static-curl"] }
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
