--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
-          - macos-10.15
-          - windows-2019
+        - {name: ubuntu-18.04, exe_suffix: "" }
+        - {name: macos-10.15, exe_suffix: "" }
+        - {name: windows-2019, exe_suffix: ".exe" }
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.name }}
 
     steps:
 
@@ -182,7 +182,7 @@ jobs:
         - macos-10.15
         - windows-2019
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os.name }}
 
     steps:
 
@@ -299,6 +299,11 @@ jobs:
       - name: Build ${{ runner.os }} fileio binary.
         run: |
           cargo build --bin fileio --features="env_logger" --release
+        if: matrix.os != 'windows-2019'
+
+      - name: Build ${{ runner.os }} fileio binary.
+        run: |
+          cargo build --bin fileio --features="env_logger" --release
         env:
           LIBCLANG_PATH: ${{ env.LIBCLANG_PATH_WIN }}
         if: matrix.os == 'windows-2019'
@@ -336,8 +341,7 @@ jobs:
         with:
           name: ${{ runner.os }}-fileio
           path: |
-            ./target/release/fileio.exe
-          if: matrix.os == 'windows-2019'
+            ./target/release/fileio${{ matrix.os.exe_suffix}}
 
       - uses: actions/upload-artifact@v2
         with:
@@ -376,7 +380,7 @@ jobs:
           - macOS
           - Windows
           - Linux
-    runs-on: [self-hosted, '${{ matrix.os }}']
+    runs-on: [self-hosted, '${{ matrix.os.name }}']
     steps:
       - name: Remove previous build.
         shell: bash
@@ -386,13 +390,13 @@ jobs:
 
       - uses: actions/download-artifact@v2
         with:
-          name: ${{ matrix.os }}-artifacts
+          name: ${{ matrix.os.name }}-artifacts
           path: |
             console
 
       - uses: actions/download-artifact@v2
         with:
-          name: ${{ matrix.os }}-artifacts-bench
+          name: ${{ matrix.os.name }}-artifacts-bench
           path: |
             bench
 
@@ -404,8 +408,8 @@ jobs:
           7z x $archive -aoa
           7z x ${archive%.xz} -aoa
           echo "extracted release-archive"
-          mv ../bench/${{ matrix.os }}.zip .
-          7z x ${{ matrix.os }}.zip -aoa
+          mv ../bench/${{ matrix.os.name }}.zip .
+          7z x ${{ matrix.os.name }}.zip -aoa
           echo "extracted bench data"
 
       - name: Run CPU Frontend Benchmark.
