--- a/console_backend/Cargo.toml
+++ b/console_backend/Cargo.toml
@@ -45,6 +45,7 @@ sbp-settings = "0.6.0"
 env_logger = { version = "0.9", optional = true }
 mimalloc = { version = "0.1", default-features = false }
 curl = { version = "0.4", features = ["ssl", "static-curl"] }
+serde_variant = "0.1.1"
 
 [target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
 serialport = "4.0.1"
