--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ readme = "README.md"
 classifiers = []
 requires-python = ">=3.8"
 dynamic = ['version', 'description']
-dependencies = ["PySide2 ~= 5.15.2", "pycapnp ~= 1.1.0"]
+dependencies = ["pycapnp ~= 1.1.0"]
 
 [project.optional-dependencies]
 test = [
