--- a/Makefile.toml
+++ b/Makefile.toml
@@ -323,7 +323,7 @@ exec --fail-on-error ${DIST_PYTHON} ./get-pip.py
 [tasks.call-build-console-bin]
 private = true
 command = "cargo"
-args = ["build", "--release", "-vv", "--bin", "console"]
+args = ["build", "--release", "-vv", "--bin", "swift-console"]
 
 [tasks.build-console]
 env = { PYO3_CONFIG_FILE = "${CONSOLE_PYO3_CONFIG_FILE}" }
@@ -337,17 +337,17 @@ dependencies = ["call-build-console-bin"]
 dependencies = ["build-console"]
 script_runner = "@duckscript"
 script = '''
-cp target/release/console py39-dist/console
+cp target/release/swift-console py39-dist/swift-console
 os = os_family
 if eq ${os} mac
-  exec --fail-on-error install_name_tool -change /install/lib/libpython3.9.dylib @executable_path/lib/libpython3.9.dylib py39-dist/console
+  exec --fail-on-error install_name_tool -change /install/lib/libpython3.9.dylib @executable_path/lib/libpython3.9.dylib py39-dist/swift-console
 end
 '''
 
 [tasks.build-dist-install-console.windows]
 script = '''
-cp target/release/console.exe py39-dist/console.exe
-cp target/release/console.pdb py39-dist/console.pdb
+cp target/release/swift-console.exe py39-dist/swift-console.exe
+cp target/release/swift-console.pdb py39-dist/swift-console.pdb
 cp target/x86_64-pc-windows-msvc/release/console_backend.pdb py39-dist/Lib/site-packages/console_backend/console_backend.pdb
 '''
 
@@ -515,7 +515,7 @@ end
 [tasks.strip-dist]
 script_runner = "@duckscript"
 script = '''
-exec --fail-on-error strip ./py39-dist/console
+exec --fail-on-error strip ./py39-dist/swift-console
 rm -r ./py39-dist/bin
 '''
 
@@ -523,7 +523,7 @@ rm -r ./py39-dist/bin
 script_runner = "@duckscript"
 script = '''
 cm_run_task strip-dist-pdb
-exec --fail-on-error strip.exe ./py39-dist/console.exe
+exec --fail-on-error strip.exe ./py39-dist/swift-console.exe
 rm ./py39-dist/python.exe
 rm ./py39-dist/pythonw.exe
 '''
@@ -564,8 +564,8 @@ set_env FINAL_DIR "installers/macOS"
 set_env TMP_DIR "target/installer"
 set_env CONTENTS_MACOS_DIR "MacOS"
 set_env CONTENTS_RESOURCES_DIR "Resources"
-set_env APP_FILE_PREFIX "Swift-Navigation-Console"
-set_env APP_ORIGINAL_NAME "console"
+set_env APP_FILE_PREFIX "Swift Console"
+set_env APP_ORIGINAL_NAME "swift-console"
 set_env VERSION_PATH "console_backend/src/version.txt"
 set_env INFO_PLIST_PATH "installers/macOS/Info.plist"
 set_env ICNS_PATH "installers/macOS/icon.icns"
@@ -597,7 +597,7 @@ end
 version_path = get_env VERSION_PATH
 version = readfile ${version_path}
 version = trim_end ${version}
-dmg_path = set ./${final_dir}/${app_file_prefix}-Installer-${version}.dmg
+dmg_path = set ./${final_dir}/${app_original_name}_${version}_macos.dmg
 
 old_dmgs = glob_array "./${final_dir}/*.dmg"
 for dmg_path in ${old_dmgs}
@@ -610,7 +610,7 @@ exec --fail-on-error mv ./${contents_mac_os}/${app_original_name} "./${contents_
 cp ./${info_plist_path} ./${contents_dir}/Info.plist
 mkdir ${contents_resources_dir}
 cp ${icns_path} ./${contents_resources_dir}/${app_file_prefix}.icns
-exec --fail-on-error create-dmg --volname "${app_file_prefix}-Installer" --volicon "${icns_path}" --background "${background_path}" --hdiutil-verbose --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "${app_dir_name}" 200 190 --hide-extension "${app_dir_name}" --app-drop-link 600 185 "${dmg_path}" "${tmp_dir}"
+exec --fail-on-error create-dmg --volname "${app_file_prefix}" --volicon "${icns_path}" --background "${background_path}" --hdiutil-verbose --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "${app_dir_name}" 200 190 --hide-extension "${app_dir_name}" --app-drop-link 600 185 "${dmg_path}" "${tmp_dir}"
 '''
 
 [tasks.dist-to-installer-env.linux]
@@ -622,6 +622,9 @@ set_env USR_DIR "usr"
 set_env APP_DIR_NAME "swift-navigation-console"
 set_env APPS_DIR "share/applications"
 set_env ICONS_DIR "share/icons/hicolor"
+version = readfile console_backend/src/version.txt
+version = trim_end ${version}
+set_env VERSION ${version}
 '''
 
 [tasks.dist-to-installer.linux]
@@ -632,7 +635,6 @@ script = '''
 if [ -d $TMP_DIR ]; then
   rm -rf $TMP_DIR
 fi
-
 mkdir -p $TMP_DIR/$OPT_DIR
 cp -r py39-dist/ $TMP_DIR/$OPT_DIR/$APP_DIR_NAME/
 
@@ -641,7 +643,7 @@ cp installers/Linux/$APP_DIR_NAME.desktop $TMP_DIR/$USR_DIR/$APPS_DIR/
 mkdir -p $TMP_DIR/$USR_DIR/$ICONS_DIR
 cp -r installers/Linux/hicolor/* $TMP_DIR/$USR_DIR/$ICONS_DIR
 
-fpm -t deb -s dir --depends libxcb-xinerama0 -v $(cat console_backend/src/version.txt) --debug --verbose -C $TMP_DIR -f -n $APP_DIR_NAME $OPT_DIR $USR_DIR
+fpm -t deb -s dir --depends libxcb-xinerama0 -v $VERSION -p "${APP_DIR_NAME}_${VERSION}_linux.deb" --debug --verbose -C $TMP_DIR -f -n $APP_DIR_NAME $OPT_DIR $USR_DIR
 mv *.deb installers/Linux/
 '''
 
@@ -840,42 +842,42 @@ args = ["utils/bench_runner.py", "--disk_usage"]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/swift-console
 '''
 
 [tasks.frontend-cpu-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console.exe
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/swift-console.exe
 '''
 
 [tasks.frontend-cpu-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_cpu --executable=${WORKSPACE}/py39-dist/swift-console
 '''
 
 [tasks.frontend-mem-bench.linux]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/swift-console
 '''
 
 [tasks.frontend-mem-bench.windows]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console.exe
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/swift-console.exe
 '''
 
 [tasks.frontend-mem-bench.mac]
 script_runner = "@shell"
 script = '''
 echo 'This is only used to validate locally.'
-cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/console
+cd console_backend/tests && python ../../utils/bench_runner.py --frontend_mem --executable=${WORKSPACE}/py39-dist/swift-console
 '''
 
 [tasks.newline-terminator]
