--- a/installers/macOS/Info.plist
+++ b/installers/macOS/Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIconFile</key>
-	<string>Swift-Navigation-Console.icns</string>
+	<string>Swift Console.icns</string>
 </dict>
 </plist>
