MacOS High DPI mode
* https://doc.qt.io/qt-5/highdpi.html

--- a/installers/macOS/Info.plist
+++ b/installers/macOS/Info.plist
@@ -4,5 +4,9 @@
 <dict>
 	<key>CFBundleIconFile</key>
 	<string>Swift-Navigation-Console.icns</string>
+  <key>NSPrincipalClass</key>
+  <string>NSApplication</string>
+  <key>NSHighResolutionCapable</key>
+  <string>True</string>
 </dict>
 </plist>
