--- a/installers/Linux/swift-console.desktop
+++ b/installers/Linux/swift-console.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Name=Swift Console
 Type=Application
-Exec=/opt/swift-navigation-console/swift-console
+Exec=/opt/swift-console/swift-console
 Terminal=false
 NoDisplay=false
 Categories=Science
 Version=1.2
-Icon=swift-navigation-console
+Icon=swift-console
